--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div class="lds-css ng-scope">
 			<img style="transform: scale(0.5);transform-origin: center;opacity: 1;
 			animation: scale 2000ms ease-in-out forwards;" src="images/logo/logo.png" alt="">
-			<!-- <div class="lds-spinner" style="100%;height:100%">
+			<div class="lds-spinner" style="width: 100%; height:100%">
 				<div></div>
 				<div></div>
 				<div></div>
@@ -58,7 +58,7 @@
 				<div></div>
 				<div></div>
 				<div></div>
-			</div> -->
+			</div>
 		</div>
 	</div>
 
@@ -128,7 +128,7 @@
 										class="line_double mx-auto color_default">about</span>about myself</h2>
 								<span class="sub_title color_lightgray">I am passionate about developing excellent 
 									software that improves the lives of those around me. 
-									I specialize in creating web & mobile software for clients ranging 
+									I specialize in creating web & mobile & AI software for clients ranging 
 									from individuals and small-businesses all the way to large enterprise corporations. 
 									What would you do if you had a web & mobile software expert available at your fingertips?
 								</span>
@@ -148,7 +148,7 @@
 										outside my comfort and knowledge set, as continuing to learn new languages 
 										and development techniques are important to me and the success of your organization. 
 										I’ve attached a copy of my resume that details my projects and experience in web & mobile software development. 
-										I can be reached anytime via my cell phone, +1 4326141127 or via email at mai.bach.super@gmail.com . 
+										I can be reached anytime via my cell phone, +1 (432) 614-1127 or via email at crazydev221@gmail.com . 
 										Thank you for your time and consideration. I look forward to speaking with you about this opportunity. 
 										Sincerely </p>
 								</div>
@@ -157,15 +157,15 @@
 										<div class="col-md-12 col-lg-6">
 											<ul>
 												<li><span class="color_secondery">Name :</span> Mai Nguyen</li>
-												<li><span class="color_secondery">Email :</span> mai.bach.super@gmail.com</li>
-												<li><span class="color_secondery">Phone :</span> +1 4326141127</li>
+												<li><span class="color_secondery">Email :</span> crazydev221@gmail.com</li>
+												<li><span class="color_secondery">Phone :</span> +1 (432) 614-1127 </li>
 											</ul>
 										</div>
 										<div class="col-md-12 col-lg-6">
 											<ul>
 												<li><span class="color_secondery">Date of Birth :</span> 21 Feburary 1991</li>
 												<li><span class="color_secondery">Blood Group :</span> A+</li>
-												<li><span class="color_secondery">Address :</span>  Odessa, TX, United State</li>
+												<li><span class="color_secondery">Address :</span>  Odessa, TX, United States </li>
 											</ul>
 										</div>
 									</div>
@@ -222,7 +222,8 @@
 									<p class="pt_15">A few I would like to highlight that would enable me to contribute to your bottom
 										line are:
 										Talented skilled Senior Web & Mobile Sfotware Programmer with 7+ years of experienced with expertise in 
-										MERN Stack, React.js, Vue.js, Next.js, Nest.js, Angular.js, Django, Flask, React Native, Ionic.
+										Web development and Mobile application development include MERN Stack, React, Angular.js, 
+										Vue.js, Next.js, Nest.js, Django, Flask, React Native, Ionic, Android, iOS, and so on.
 										Proficient in Python and JavaScript, with additional skills in C++, C# and Java.
 										Seeking a challenging position to apply my technical skills and contribute to innovative projects.
 										Professional collaborative team player with a passion for researching and implementing new technologies,
@@ -231,39 +232,81 @@
 							</div>
 							<div class="col-md-12 col-lg-6">
 								<div class="skill-progress wow animated slideInRight color_lightgray">
-									<div class="prgs-bar fact-counter"> <span>React</span>
+									<div class="prgs-bar fact-counter"> <span>Web development</span>
+										<div class="progress count wow" data-wow-duration="0ms">
+											<div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="93">0</span>%
+											</div>
+											<div class="progress-bar" role="progressbar" aria-valuenow="93" aria-valuemax="100"> </div>
+										</div>
+									</div>
+									<div class="prgs-bar fact-counter"> <span>Mobile development</span>
+										<div class="progress count wow" data-wow-duration="0ms">
+											<div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="88">0</span>%
+											</div>
+											<div class="progress-bar" role="progressbar" aria-valuenow="88" aria-valuemax="100"> </div>
+										</div>
+									</div>
+									<div class="prgs-bar fact-counter"> <span>JavaScript</span>
 										<div class="progress count wow" data-wow-duration="0ms">
 											<div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="95">0</span>%
 											</div>
 											<div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemax="100"> </div>
 										</div>
 									</div>
-									<div class="prgs-bar fact-counter"> <span>Vue.JS</span>
+									<div class="prgs-bar fact-counter"> <span>Python</span>
+										<div class="progress count wow" data-wow-duration="0ms">
+											<div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="93">0</span>%
+											</div>
+											<div class="progress-bar" role="progressbar" aria-valuenow="93" aria-valuemax="100"> </div>
+										</div>
+									</div>
+									<div class="prgs-bar fact-counter"> <span>PHP</span>
 										<div class="progress count wow" data-wow-duration="0ms">
 											<div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="90">0</span>%
 											</div>
 											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemax="100"> </div>
 										</div>
 									</div>
-									<div class="prgs-bar fact-counter"> <span>Node.js</span>
+									<div class="prgs-bar fact-counter"> <span>Java</span>
 										<div class="progress count wow" data-wow-duration="0ms">
-											<div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="98">0</span>%
+											<div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="88">0</span>%
 											</div>
-											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemax="100"> </div>
+											<div class="progress-bar" role="progressbar" aria-valuenow="88" aria-valuemax="100"> </div>
 										</div>
 									</div>
-									<div class="prgs-bar fact-counter"> <span>MERN Stack</span>
+									<div class="prgs-bar fact-counter"> <span>CMS development</span>
 										<div class="progress count wow" data-wow-duration="0ms">
-											<div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="95">0</span>%
+											<div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="85">0</span>%
 											</div>
-											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemax="100"> </div>
+											<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemax="100"> </div>
 										</div>
 									</div>
-									<div class="prgs-bar fact-counter"> <span>React Native</span>
+									<div class="prgs-bar fact-counter"> <span>C# (.NET)</span>
+										<div class="progress count wow" data-wow-duration="0ms">
+											<div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="83">0</span>%
+											</div>
+											<div class="progress-bar" role="progressbar" aria-valuenow="93" aria-valuemax="100"> </div>
+										</div>
+									</div>
+									<div class="prgs-bar fact-counter"> <span>Database(SQL, No-SQL)</span>
 										<div class="progress count wow" data-wow-duration="0ms">
 											<div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="90">0</span>%
 											</div>
 											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemax="100"> </div>
+										</div>
+									</div>
+									<div class="prgs-bar fact-counter"> <span>Android</span>
+										<div class="progress count wow" data-wow-duration="0ms">
+											<div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="90">0</span>%
+											</div>
+											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemax="100"> </div>
+										</div>
+									</div>
+									<div class="prgs-bar fact-counter"> <span>iOS application</span>
+										<div class="progress count wow" data-wow-duration="0ms">
+											<div class="skill-percent"><span class="count-num" data-speed="3000" data-stop="80">0</span>%
+											</div>
+											<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemax="100"> </div>
 										</div>
 									</div>
 									<div class="prgs-bar fact-counter"> <span>Smart Contracts</span>
@@ -345,9 +388,9 @@
 											<div class="srv_item_number color_lightgray"><strong>01.</strong></div>
 											<h3 class="p_20 text-uppercase color_primary">Web Development</h3>
 											<div class="srv_icon color_white"><span class="flaticon-programming"></span></div>
-											<p>MERN Stack product, Medical and Healthycare Website, E-Shop Website, Business Data Management Website, Speech Recognition Website, Portfolio Website, Media Website,
-												Educational Website, Personal Website, Web Portal Website. What Type of
-												Website
+											<p>Full-Stack product, Frontend project, Backend Project, UI Design, CMS development (Wordpress, Shopify and etc)
+												Medical and Healthycare Website, E-Shop Website, Portfolio Website, Media Website,
+												Educational Website, Personal Website, Web Portal Website. <br /> What Type of Website
 												Will You Create?</p>
 										</div>
 									</div>
@@ -356,7 +399,8 @@
 											<div class="srv_item_number color_lightgray"><strong>02.</strong></div>
 											<h3 class="p_20 text-uppercase color_primary">Desktop Application</h3>
 											<div class="srv_icon color_white"><span class="flaticon-website-design-symbol"></span></div>
-											<p>Visual Studio, MFC product, QT program, PyQT, Tkinter with Python, Figma Design </p>
+											<p>Visual Studio, MFC product, QT program, PyQT, Tkinter, .NET Framework projet, 
+												Anything you want for desktop application </p>
 										</div>
 									</div>
 									<div class="col-md-6 col-lg-4">
@@ -364,10 +408,10 @@
 											<div class="srv_item_number color_lightgray"><strong>03.</strong></div>
 											<h3 class="p_20 text-uppercase color_primary">Mobile Development</h3>
 											<div class="srv_icon color_white"><span class="flaticon-internet"></span></div>
-											<p class="desc"><strong>Native Apps: </strong>Objective-C, Swift, iOS, Java, ADK, .NET(C#)
+											<p class="desc"><strong>Native Apps: </strong> Java, Kotlin, Android, Objective-C, Swift, iOS, ADK, .NET(C#)
 												<br><br>
-												<strong>Hybrid Apps: </strong>HTML, CSS, Javascript, React Native, Ionic Cordova/PhoneGap, Cross platform Mobile
-												Development Frameworks<br>
+												<strong>Hybrid Apps: </strong>HTML, CSS, JavaScript, React Native, Ionic Cordova/PhoneGap, Flutter, 
+												Cross platform Mobile Development Frameworks<br>
 											</p>
 
 										</div>
@@ -424,8 +468,7 @@
 							<div class="section_title_1 text-center mx-auto pb_60 wow animated slideInUp">
 								<h2 class="title text-uppercase color_white"><span
 										class="line_double mx-auto color_default">portfolio</span>Previous Projects</h2>
-								<span class="sub_title color_lightgray">Interdum a etiam sagittis vehicula porta. Massa felis eros quam
-									blandit nulla dolor habitant. Ullamcorper quis ornare et proin pellentesque.</span>
+								<span class="sub_title color_lightgray">In my previous companies and contracts, these are some of my released products. If you want like this, please contact with me. </span>
 							</div>
 						</div>
 						<div class="col-md-12 col-lg-12">
